# quotes_dbx

./: 404.html  LICENSE  README.md  index.html  init_script.sh  mkdocs.yml  objects.inv  pyproject.toml
.dbx/: project.json
.github/workflows/: quotes_ci.yml  quotes_ci_cd.yml  update_docs.yml
appendix/: index.html
common_functions/: index.html
conf/: deployment.yml
docs/: appendix.md  common_functions.md  curiosity.md  index.md  logging.md  tests.md
logging/: index.html
quotes/: common.py  config_logging.py  create_catalog_quotes.py  dummy.py  provide_config.py  request_quote.py
quotes/pipeline/: quote_validation.py
quotes_dbx/: common.py  config_logging.py  create_catalog_quotes.py  extract_quotes.py  provide_config.py  request_quote.py
quotes_dbx/pipeline/: DLT Quote.py  create_catalog_quotes.py  dlt_quote.py  quote_validation.py
references/: index.html
search/: search_index.json
tests/: conftest.py  index.html  test_common.py  test_extract.py
tests/integration/: test_api_ninjas.py
tests/unit-local/: test_common.py
tests/unit_local/: test_common.py  test_dummy.py  test_extract.py
use_case_functions/: index.html
