[tool.poetry]
name = "quotes-dbx"
version = "0.1.0"
description = ""
authors = ["doug-pires <dpiresmartins@yahoo.com.br>"]
readme = "README.md"
packages = [{include = "quotes_dbx"}]

# packages for local development and unit testing
# please note that these packages are already available in DBR, there is no need to install them on DBR.
# LOCAL_REQUIREMENTS = [ "pyspark==3.2.1","delta-spark==1.1.0","scikit-learn","pandas","mlflow"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
databricks-sdk = "^0.11.0"


[tool.poetry.group.dev.dependencies]
dbx = "0.8.18"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
black = "^23.9.1"
isort = "^5.12.0"
chispa = "^0.9.4"
pytest-cov = "^4.1.0"


[tool.poetry.group.local.dependencies]
pyspark = "3.4"
delta-spark = "2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra","-v","--setup-show","-s"]
testpaths = ["tests"]

[tool.black]
line-length = 88