[tool.poetry]
name = "quotes"
version = "0.1.0"
description = ""
authors = ["doug-pires <dpiresmartins@yahoo.com.br>"]
readme = "README.md"
packages = [{include = "quotes"}]

# packages for local development and unit testing
# please note that these packages are already available in DBR, there is no need to install them on DBR.
# LOCAL_REQUIREMENTS = [ "pyspark==3.2.1","delta-spark==1.1.0","scikit-learn","pandas","mlflow"]


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
dbx = "^0.8.18"
databricks-sdk = "^0.11.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
black = "^23.9.1"
isort = "^5.12.0"
chispa = "^0.9.4"
pytest-cov = "^4.1.0"


[tool.poetry.group.local.dependencies]
pyspark = "3.4"
delta-spark = "2.4"


[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.4.6"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--strict-config", "-ra","-v","--setup-show","-s"]
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.black]
line-length = 88

[tool.poetry.scripts]
request-quote = "quotes_dbx.request_quote:main"